# AI-vs-AI-Debate-Calculator

./: .gitignore  README.md  debate_telemetry.jsonl  test_imports.py
debate_calc/: .env.example  Makefile  README.md  WINDOWS_SETUP.md  __init__.py  emergency_install.bat  fix_dearpygui.ps1  fix_dependencies.ps1  pyproject.toml  pytest.ini  setup.bat  setup.ps1  test_installation.py
debate_calc/app/: __init__.py  orchestrator.py  pace_controller.py  prompts.py  settings.py  telemetry.py  ui_cli.py  ui_dpg.py  ui_tkinter.py
debate_calc/tests/: __init__.py  test_protocol.py  test_smoke.py
